force-app/main/default/objects/No_Working_Day__mdt/No_Working_Day__mdt.object-meta.xml
<CustomObject>
    <label>No Working Day</label>
    <pluralLabel>No Working Days</pluralLabel>
</CustomObject>