force-app/main/default/objects/No_Working_Day__mdt/fields/Abolition_Esclavage__c.field-meta.xml
<CustomField>
    <fullName>Abolition_Esclavage__c</fullName>
    <label>Abolition de l&apos;esclavage</label>
    <type>Date</type>
</CustomField>