force-app/main/default/objects/No_Working_Day__mdt/fields/Ascension__c.field-meta.xml
<CustomField>
    <fullName>Ascension__c</fullName>
    <label>Ascension</label>
    <type>Date</type>
</CustomField>