force-app/main/default/objects/No_Working_Day__mdt/fields/Assomption__c.field-meta.xml
<CustomField>
    <fullName>Assomption__c</fullName>
    <label>Assomption</label>
    <type>Date</type>
</CustomField>