force-app/main/default/objects/No_Working_Day__mdt/fields/Jour_Noel__c.field-meta.xml
<CustomField>
    <fullName>Jour_Noel__c</fullName>
    <label>Jour de Noël</label>
    <type>Date</type>
</CustomField>