force-app/main/default/objects/No_Working_Day__mdt/fields/Lundi_Paques__c.field-meta.xml
<CustomField>
    <fullName>Lundi_Paques__c</fullName>
    <label>Lundi de Pâques</label>
    <type>Date</type>
</CustomField>