force-app/main/default/objects/No_Working_Day__mdt/fields/Lundi_Pentecote__c.field-meta.xml
<CustomField>
    <fullName>Lundi_Pentecote__c</fullName>
    <label>Lundi de Pentecôte</label>
    <type>Date</type>
</CustomField>