force-app/main/default/objects/No_Working_Day__mdt/fields/Toussaint__c.field-meta.xml
<CustomField>
    <fullName>Toussaint__c</fullName>
    <label>Toussaint</label>
    <type>Date</type>
</CustomField>