force-app/main/default/objects/No_Working_Day__mdt/fields/Vendredi_saint__c.field-meta.xml
<CustomField>
    <fullName>Vendredi_saint__c</fullName>
    <label>Vendredi saint</label>
    <type>Date</type>
</CustomField>