force-app/main/default/objects/No_Working_Day__mdt/fields/X11_novembre__c.field-meta.xml
<CustomField>
    <fullName>X11_novembre__c</fullName>
    <label>11 novembre</label>
    <type>Date</type>
</CustomField>