force-app/main/default/objects/No_Working_Day__mdt/fields/X14_juillet__c.field-meta.xml
<CustomField>
    <fullName>X14_juillet__c</fullName>
    <label>14 juillet</label>
    <type>Date</type>
</CustomField>