force-app/main/default/objects/No_Working_Day__mdt/fields/X1er_mai__c.field-meta.xml
<CustomField>
    <fullName>X1er_mai__c</fullName>
    <label>1er mai</label>
    <type>Date</type>
</CustomField>