force-app/main/default/objects/No_Working_Day__mdt/fields/X2eme_jour_Noel__c.field-meta.xml
<CustomField>
    <fullName>X2eme_jour_Noel__c</fullName>
    <label>2ème jour de Noël</label>
    <type>Date</type>
</CustomField>