force-app/main/default/objects/No_Working_Day__mdt/fields/X8_mai__c.field-meta.xml
<CustomField>
    <fullName>X8_mai__c</fullName>
    <label>8 mai</label>
    <type>Date</type>
</CustomField>