force-app/main/default/objects/No_Working_Day__mdt/fields/zone__c.field-meta.xml
<CustomField>
    <fullName>zone__c</fullName>
    <label>zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>alsace-moselle</fullName>
                <default>true</default>
                <label>alsace-moselle</label>
            </value>
            <value>
                <fullName>guadeloupe</fullName>
            </value>
            <value>
                <fullName>guyane</fullName>
            </value>
            <value>
                <fullName>la-reunion</fullName>
            </value>
            <value>
                <fullName>martinique</fullName>
            </value>
            <value>
                <fullName>mayotte</fullName>
            </value>
            <value>
                <fullName>metropole</fullName>
            </value>
            <value>
                <fullName>nouvelle-caledonie</fullName>
            </value>
            <value>
                <fullName>polynesie-francaise</fullName>
            </value>
            <value>
                <fullName>saint-barthelemy</fullName>
            </value>
            <value>
                <fullName>saint-martin</fullName>
            </value>
            <value>
                <fullName>saint-pierre-et-miquelon</fullName>
            </value>
            <value>
                <fullName>wallis-et-futuna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>